--- a/assets/scss/_setting.scss
+++ b/assets/scss/_setting.scss
@@ -26,8 +26,13 @@ $path-root: '/';
 // Color Management
 $color-white: #fff;
 $color-black: #333;
-$color-gray: #ddd;
-$color-red: #f00;
+$color-gray: #d1d2d3;
+$color-gray-light: #eeeeef;
+$color-gray-dark: #a3a3a4;
+$color-red: #D53B51;
+$color-red-light: #f4bbc3;
+$color-green: #20B07A;
+$color-green-light: #8dc7b2;
 
 $palettes: (
   'sns': (
